sdk/v0.7.5/image.mdx
---
title: "image"
icon: "square-m"
description: "<a href=\"https://github.com/pixeltable/pixeltable/blob/main/pixeltable/functions/image.py#L0\" id=\"viewSource\" target=\"_blank\" rel=\"noopener noreferrer\"><img src=\"https://img.shields.io/badge/View%20Source%20on%20Github-blue?logo=github&labelColor=gray\" alt=\"View Source on GitHub\" style={{ display: 'inline', margin: '0px' }} noZoom /></a>"
noindex: true
---
# <span style={{ 'color': 'gray' }}>module</span>&nbsp; pixeltable.functions.image


Pixeltable UDFs for `ImageType`.

Example:

```python
import pixeltable as pxt

t = pxt.get_table(...)
t.select(t.img_col.convert('L')).collect()
```


## <span style={{ 'color': 'gray' }}>iterator</span>&nbsp; tile_iterator()

```python Signature
@pxt.iterator
tile_iterator(
    image: pxt.Image,
    tile_size: pxt.Json[(Int, Int)],
    *,
    overlap: pxt.Json[(Int, Int)] = (0, 0)
)
```

Iterator over tiles of an image. Each image will be divided into tiles of size `tile_size`, and the tiles will be
iterated over in row-major order (left-to-right, then top-to-bottom). An optional `overlap` parameter may be
specified. If the tiles do not exactly cover the image, then the rightmost and bottommost tiles will be padded with
blackspace, so that the output images all have the exact size `tile_size`.

__Outputs__:

    One row per tile, with the following columns:

    - `tile` (`pxt.Image`): The image tile
    - `tile_coord` (`pxt.Json`): The (x, y) coordinates of the tile in the grid of tiles
    - `tile_box` (`pxt.Json`): The (x1, y1, x2, y2) pixel coordinates of the tile in the original image

**Parameters:**

- **`image`** (`pxt.Image`): Image to split into tiles.
- **`tile_size`** (`pxt.Json[(Int`): Size of each tile, as a pair of integers `(width, height)`.
- **`overlap`** (`Any`): Amount of overlap between adjacent tiles, as a pair of integers `(width, height)`.

**Examples:**

This example assumes an existing table `tbl` with a column `img` of type `pxt.Image`.

Create a view that splits all images into 256x256 tiles with 32 pixels of overlap:

```python
pxt.create_view(
    'image_tiles',
    tbl,
    iterator=tile_iterator(
        tbl.img, tile_size=(256, 256), overlap=(32, 32)
    ),
)
```


## <span style={{ 'color': 'gray' }}>uda</span>&nbsp; stitch_tiles()

```python Signature
@pxt.uda
stitch_tiles(*args, **kwargs) -> pxt.Image | None
```

Reconstructs a single image from the tiles produced by [`tile_iterator`](./image#iterator-tile_iterator),
pasting each tile back at its original position. This is the inverse of
[`tile_iterator`](./image#iterator-tile_iterator):  aggregate the tiles of an image (grouped by a column
that identifies the source image) to obtain the full image, optionally after transforming each tile first
(e.g., drawing a segmentation overlay on it).

The reconstruction is naive: tiles are pasted in the order they arrive, so where tiles overlap, later tiles
overwrite earlier ones. It composites pixels and does not merge or deduplicate detections across tile seams.

Args:
    tile: The image tile to paste, the same size as the tiles emitted by
    [`tile_iterator`](./image#iterator-tile_iterator). All tiles in a group must have the same mode
        (and palette, for palette images).
    tile_box: The `(x1, y1, x2, y2)` pixel coordinates of the tile in the original image, as emitted by
        `tile_iterator`.
    width: The width of the original image, in pixels.
    height: The height of the original image, in pixels.

Returns:
    The reconstructed image, of size `(width, height)` and in the mode of the tiles, or `None` if there
    are no non-null tiles.

Examples:
    Split each image into tiles, draw a segmentation overlay on every tile, then stitch the overlaid tiles
    back into a single full-resolution image, one per source image. Assumes a view `tiles` created with
    [`tile_iterator`](./image#iterator-tile_iterator), with an `overlay` column computed per tile:

```python
tiles.group_by(tiles.image).select(
    stitched=stitch_tiles(
        tiles.pos,
        tiles.overlay,
        tiles.tile_box,
        tiles.image.width,
        tiles.image.height,
    )
).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; alpha_composite()

```python Signature
@pxt.udf
alpha_composite(im1: pxt.Image, im2: pxt.Image) -> pxt.Image
```

Alpha composite `im2` over `im1`.

Equivalent to [`PIL.Image.alpha_composite()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.alpha_composite)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; b64_encode()

```python Signature
@pxt.udf
b64_encode(
    img: pxt.Image,
    image_format: pxt.String = 'png'
) -> pxt.String
```

Convert image to a base64-encoded string.


**Parameters:**

- **`img`** (`pxt.Image`): image
- **`image_format`** (`pxt.String`): image format [supported by PIL](https://pillow.readthedocs.io/en/stable/handbook/image-file-formats.html#fully-supported-formats)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; blend()

```python Signature
@pxt.udf
blend(
    im1: pxt.Image,
    im2: pxt.Image,
    alpha: pxt.Float
) -> pxt.Image
```

Return a new image by interpolating between two input images, using a constant alpha.

Equivalent to [`PIL.Image.blend()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.blend)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; composite()

```python Signature
@pxt.udf
composite(
    image1: pxt.Image,
    image2: pxt.Image,
    mask: pxt.Image
) -> pxt.Image
```

Return a composite image by blending two images using a mask.

Equivalent to [`PIL.Image.composite()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.composite)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; convert()

```python Signature
@pxt.udf
convert(self: pxt.Image, mode: pxt.String) -> pxt.Image
```

Convert the image to a different mode.

Equivalent to
[`PIL.Image.Image.convert()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.convert).

**Parameters:**

- **`mode`** (`pxt.String`): The mode to convert to. See the
    [Pillow documentation](https://pillow.readthedocs.io/en/stable/handbook/concepts.html#concept-modes)
    for a list of supported modes.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; crop()

```python Signature
@pxt.udf
crop(
    self: pxt.Image,
    box: pxt.Json[(Int, Int, Int, Int)]
) -> pxt.Image
```

Return a rectangular region from the image. The box is a 4-tuple defining the left, upper, right, and lower pixel
coordinates.

Equivalent to
[`PIL.Image.Image.crop()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.crop)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; effect_spread()

```python Signature
@pxt.udf
effect_spread(self: pxt.Image, distance: pxt.Int) -> pxt.Image
```

Randomly spread pixels in an image.

Equivalent to
[`PIL.Image.Image.effect_spread()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.effect_spread)

**Parameters:**

- **`distance`** (`pxt.Int`): The distance to spread pixels.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; entropy()

```python Signature
@pxt.udf
entropy(
    self: pxt.Image,
    mask: pxt.Image | None = None,
    extrema: pxt.Json[(Json, ...)] | None = None
) -> pxt.Float
```

Returns the entropy of the image, optionally using a mask and extrema.

Equivalent to
[`PIL.Image.Image.entropy()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.entropy)

**Parameters:**

- **`mask`** (`pxt.Image | None`): An optional mask image.
- **`extrema`** (`pxt.Json[(Json`): An optional list of extrema.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; get_metadata()

```python Signature
@pxt.udf
get_metadata(self: pxt.Image) -> ImageMetadata
```

Return metadata for the image.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; getbands()

```python Signature
@pxt.udf
getbands(self: pxt.Image) -> pxt.Json[(String, ...)]
```

Return a tuple containing the names of the image bands.

Equivalent to
[`PIL.Image.Image.getbands()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.getbands)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; getbbox()

```python Signature
@pxt.udf
getbbox(
    self: pxt.Image,
    *,
    alpha_only: pxt.Bool = True
) -> pxt.Json[(Int, Int, Int, Int)] | None
```

Return a bounding box for the non-zero regions of the image.

Equivalent to [`PIL.Image.Image.getbbox()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.getbbox)

**Parameters:**

- **`alpha_only`** (`pxt.Bool`): If `True`, and the image has an alpha channel, trim transparent pixels. Otherwise,
    trim pixels when all channels are zero.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; getchannel()

```python Signature
@pxt.udf
getchannel(self: pxt.Image, channel: pxt.Int) -> pxt.Image
```

Return an L-mode image containing a single channel of the original image.

Equivalent to
[`PIL.Image.Image.getchannel()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.getchannel)

**Parameters:**

- **`channel`** (`pxt.Int`): The channel to extract. This is a 0-based index.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; getcolors()

```python Signature
@pxt.udf
getcolors(
    self: pxt.Image,
    maxcolors: pxt.Int = 256
) -> pxt.Json[(Json[(Int, Int)], ...)]
```

Return a list of colors used in the image, up to a maximum of `maxcolors`.

Equivalent to
[`PIL.Image.Image.getcolors()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.getcolors)

**Parameters:**

- **`maxcolors`** (`pxt.Int`): The maximum number of colors to return.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; getextrema()

```python Signature
@pxt.udf
getextrema(self: pxt.Image) -> pxt.Json[(Int, Int)]
```

Return a 2-tuple containing the minimum and maximum pixel values of the image.

Equivalent to
[`PIL.Image.Image.getextrema()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.getextrema)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; getpalette()

```python Signature
@pxt.udf
getpalette(
    self: pxt.Image,
    mode: pxt.String | None = None
) -> pxt.Json[(Int, ...)] | None
```

Return the palette of the image, optionally converting it to a different mode.

Equivalent to
[`PIL.Image.Image.getpalette()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.getpalette)

**Parameters:**

- **`mode`** (`pxt.String | None`): The mode to convert the palette to.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; getpixel()

```python Signature
@pxt.udf
getpixel(
    self: pxt.Image,
    xy: pxt.Json[(Json, ...)]
) -> pxt.Json[(Int,)]
```

Return the pixel value at the given position. The position `xy` is a tuple containing the x and y coordinates.

Equivalent to
[`PIL.Image.Image.getpixel()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.getpixel)

**Parameters:**

- **`xy`** (`pxt.Json[(Json`): The coordinates, given as (x, y).


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; getprojection()

```python Signature
@pxt.udf
getprojection(self: pxt.Image) -> pxt.Json[(Json[(Int, ...)], Json[(Int, ...)])]
```

Return two sequences representing the horizontal and vertical projection of the image.

Equivalent to
[`PIL.Image.Image.getprojection()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.getprojection)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; height()

```python Signature
@pxt.udf
height(self: pxt.Image) -> pxt.Int
```

Return the height of the image.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; histogram()

```python Signature
@pxt.udf
histogram(
    self: pxt.Image,
    mask: pxt.Image | None = None,
    extrema: pxt.Json[(Json, ...)] | None = None
) -> pxt.Json[(Int, ...)]
```

Return a histogram for the image.

Equivalent to
[`PIL.Image.Image.histogram()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.histogram)

**Parameters:**

- **`mask`** (`pxt.Image | None`): An optional mask image.
- **`extrema`** (`pxt.Json[(Json`): An optional list of extrema.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; mode()

```python Signature
@pxt.udf
mode(self: pxt.Image) -> pxt.String
```

Return the image mode.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; point()

```python Signature
@pxt.udf
point(
    self: pxt.Image,
    lut: pxt.Json[(Int, ...)],
    mode: pxt.String | None = None
) -> pxt.Image
```

Map image pixels through a lookup table.

Equivalent to
[`PIL.Image.Image.point()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.point)

**Parameters:**

- **`lut`** (`pxt.Json[(Int`): A lookup table.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; quantize()

```python Signature
@pxt.udf
quantize(
    self: pxt.Image,
    colors: pxt.Int = 256,
    method: pxt.Int | None = None,
    kmeans: pxt.Int = 0,
    palette: pxt.Image | None = None,
    dither: pxt.Int = <Dither.FLOYDSTEINBERG: 3>
) -> pxt.Image
```

Convert the image to 'P' mode with the specified number of colors.

Equivalent to
 [`PIL.Image.Image.quantize()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.quantize)

**Parameters:**

- **`colors`** (`pxt.Int`): The number of colors to quantize to.
- **`method`** (`pxt.Int | None`): The quantization method. See the
    [Pillow documentation](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.quantize)
    for a list of supported methods.
- **`kmeans`** (`pxt.Int`): The number of k-means clusters to use.
- **`palette`** (`pxt.Image | None`): The palette to use.
- **`dither`** (`pxt.Int`): The dithering method. See the
    [Pillow documentation](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.quantize)
    for a list of supported methods.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; reduce()

```python Signature
@pxt.udf
reduce(
    self: pxt.Image,
    factor: pxt.Int,
    box: pxt.Json[(Int, Int, Int, Int)] | None = None
) -> pxt.Image
```

Reduce the image by the given factor.

Equivalent to
[`PIL.Image.Image.reduce()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.reduce)

**Parameters:**

- **`factor`** (`pxt.Int`): The reduction factor.
- **`box`** (`pxt.Json[(Int`): An optional 4-tuple of ints providing the source image region to be reduced. The values must be within
    (0, 0, width, height) rectangle. If omitted or None, the entire source is used.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; resize()

```python Signature
@pxt.udf
resize(self: pxt.Image, size: pxt.Json[(Int, Int)]) -> pxt.Image
```

Return a resized copy of the image. The size parameter is a tuple containing the width and height of the new image.

Equivalent to
[`PIL.Image.Image.resize()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.resize)


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; rotate()

```python Signature
@pxt.udf
rotate(self: pxt.Image, angle: pxt.Int) -> pxt.Image
```

Return a copy of the image rotated by the given angle.

Equivalent to
[`PIL.Image.Image.rotate()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.rotate)

**Parameters:**

- **`angle`** (`pxt.Int`): The angle to rotate the image, in degrees. Positive angles are counter-clockwise.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; thumbnail()

```python Signature
@pxt.udf
thumbnail(
    self: pxt.Image,
    size: pxt.Json[(Int, Int)],
    resample: pxt.Int = <Resampling.LANCZOS: 1>,
    reducing_gap: pxt.Float | None = 2.0
) -> pxt.Image
```

Create a thumbnail of the image.

Equivalent to
[`PIL.Image.Image.thumbnail()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.thumbnail)

**Parameters:**

- **`size`** (`pxt.Json[(Int`): The size of the thumbnail, as a tuple of (width, height).
- **`resample`** (`Any`): The resampling filter to use. See the
    [Pillow documentation](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.thumbnail)
    for a list of supported filters.
- **`reducing_gap`** (`Any`): The reducing gap to use.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; to_video()

```python Signature
@pxt.udf
to_video(
    image: pxt.Image,
    *,
    duration: pxt.Float,
    fps: pxt.Int = 24,
    video_encoder: pxt.String | None = None,
    video_encoder_args: pxt.Json | None = None
) -> pxt.Video
```

Convert a still image into a video of a specified duration with ffmpeg's `-loop` option.

__Requirements:__

- `ffmpeg` needs to be installed and in PATH

**Parameters:**

- **`image`** (`pxt.Image`): Input image to convert to video.
- **`duration`** (`pxt.Float`): Duration of the output video in seconds.
- **`fps`** (`pxt.Int`): Frames per second for the output video.
- **`video_encoder`** (`pxt.String | None`): Video encoder to use. If not specified, uses the default encoder.
- **`video_encoder_args`** (`pxt.Json | None`): Additional arguments to pass to the video encoder.

**Returns:**

- `pxt.Video`: A video displaying the input image for the specified duration.

**Examples:**

Create a 5-second video from an image:

```python
tbl.select(tbl.image.to_video(duration=5.0)).collect()
```

Create a 10-second video at 30 fps from a rotated image:

```python
tbl.select(
    tbl.image.rotate(180).to_video(duration=10.0, fps=30)
).collect()
```


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; transpose()

```python Signature
@pxt.udf
transpose(self: pxt.Image, method: pxt.Int) -> pxt.Image
```

Transpose the image.

Equivalent to
[`PIL.Image.Image.transpose()`](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.transpose)

**Parameters:**

- **`method`** (`pxt.Int`): The transpose method. See the
    [Pillow documentation](https://pillow.readthedocs.io/en/stable/reference/Image.html#PIL.Image.Image.transpose)
    for a list of supported methods.


## <span style={{ 'color': 'gray' }}>udf</span>&nbsp; width()

```python Signature
@pxt.udf
width(self: pxt.Image) -> pxt.Int
```

Return the width of the image.

